[tool.poetry]
name = "snakes-cafe"
version = "0.1.0"
description = ""
authors = ["Jesse Pena <jpchato@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
